# numerical_methods

./: CMakeLists.txt  lab11cnt_tmax.csv  matrix.h  vector.h
lab1/: Buhera_Artem_L_1_16_03.odt  CMakeLists.txt  lab1.cpp
lab10/: BME_PME_PMT_errors - COPY.csv  BME_PME_PMT_errors.csv  BME_stable.csv  BME_unstable.csv  PME.csv  PMT.csv  janek.csv  lab10.cpp  plotting.py
lab11/: Buhera_Artem_L_10_16_05.odt  LU_error_t.csv  LU_error_t_small.csv  errors_h.csv  kmb_1_t.csv  kmb_2_t.csv  kmb_3_t.csv  kmb_error_t.csv  kmb_error_t_small.csv  lab11.cpp  lu_2_t.csv  plot11.py  plotting.py  thomas_1_t.csv  thomas_3_t.csv  thomas_error_t.csv
lab12/: Buhera_Artem_L_12_31_05.odt  lab12.cpp  n10.csv  n10_nodes_chebyshev.csv  n10_nodes_equi.csv  n12.csv  n12_nodes_chebyshev.csv  n12_nodes_equi.csv  n14.csv  n14_nodes_chebyshev.csv  n14_nodes_equi.csv  n15.csv  n15_nodes_chebyshev.csv  n15_nodes_equi.csv  n20.csv  n20_nodes_chebyshev.csv  n20_nodes_equi.csv  n25.csv  n25_nodes_chebyshev.csv  n25_nodes_equi.csv  n5.csv  n5_nodes_chebyshev.csv  n5_nodes_equi.csv  plotting.py
lab2/: Buhera_Artem_L_2_16_03.odt  CMakeLists.txt  lab2.cpp  lab2.py
lab3/: Buhera_Artem_L_3_27_03.odt  lab3.cpp  output
lab4/: Buhera_Artem_L_4_27_03.odt  CMakeLists.txt  lab4.cpp
lab5/: Buhera_Artem_L_5_19_04.odt  lab5.cpp
lab6/: Buhera_Artem_L_6_19_04.odt  lab6.cpp
lab7/: Buhera_Artem_L_7_03_05.odt  lab7.cpp  lab7_sor.cpp  sor.csv
lab8/: Buhera_Artem_L_8_03_05.odt  double.csv  double.txt  float.csv  lab8.cpp  lab8_plot.py
lab9/: Buhera_Artem_L_9_16_05.odt  conventional.csv  errors.csv  lab9.cpp  (+2 more)
(+9 files in other folders)
